Trying to fix home component on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,12 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
 }
 
-html,
 body {
-  height: 100%;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
